--- a/ios-developer.html
+++ b/ios-developer.html
@@ -41,7 +41,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qPW9Vfwz&k=Job&j=oFoY9fwU&__jvst=Employee&__jvsd=sa5Jzgwi&__jvsc=Twitter&bid=nxjXqMwu'>Splunk Careers - Sr iOS Developer - IT/Security Markets</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
 <h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e585459'>Stellenangebot: iOS-Developer (M/W/D) (Hamburg) ? dasauge? Stellenmarkt</a></h5> 
@@ -76,7 +76,7 @@
 <p><span class="badge badge-light">Waltham, MA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999698532533-ios-senior-engineer-mobile-developer-experience'>Square iOS Senior Engineer, Mobile Developer Experience | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999698532533-ios-senior-engineer-mobile-developer-experience'>Square iOS Senior Engineer, Mobile Developer Experience | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -289,7 +289,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oD4gafwR&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=ncMG9Mw4'>ServiceNow Careers - Senior iOS Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oD4gafwR&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=ncMG9Mw4'>ServiceNow Careers - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">Tel Aviv, Israel  Tel Aviv</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
@@ -305,7 +305,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<h5><a href='https://endios.join.com/jobs/431573-senior-ios-developer-m-f-d'>Job @ endios (Hamburg): Senior iOS Developer (m/f/d) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endios.join.com/jobs/431573-senior-ios-developer-m-f-d'>Job @ endios (Hamburg): Senior iOS Developer (m/f/d) | JOIN</a></h5> 
 <p><span class="badge badge-light">Hamburg Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -325,7 +325,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Mexico City, Mexico  Mexico</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://referrals.ibm.com/ibmreppify/jobs/196655?bpin=1046&com=2&rin=1467367'>Job Profile - Senior IOS Developer - IBM Security - MaaS360</a></h5> 
+<h5><a href='https://referrals.ibm.com/ibmreppify/jobs/196655?bpin=1046&com=2&rin=1467367'>Job Profile - Senior IOS Developer - IBM Security - MaaS360</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
@@ -443,7 +443,7 @@ designed apps (in terms of technical design) and why. This is open ended and?...
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/traderev/8779bce1-a76c-4151-b026-5d029751743e?lever-source=Careerjet'>TradeRev - Senior iOS Developer (SDEIII)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/traderev/8779bce1-a76c-4151-b026-5d029751743e?lever-source=Careerjet'>TradeRev - Senior iOS Developer (SDEIII)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 25, 2019 ... Senior iOS Developer (SDEIII). Toronto, Ontario, Canada. Engineering ? 
 Software Development. Full-time. Apply for this job. TradeRev is an online 
@@ -461,7 +461,7 @@ automotive?...</p>
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
